# Agentics

./: .cargo-crap.toml  .dockerignore  .gitignore  .gitmodules  AGENTS.md  CODE_REVIEW_FIX_PLAN.md  Cargo.toml  README.md  REVIEW.md  REWRITE_PLAN.md  docker-compose.yml  justfile  migration-problems.md  package.json  refactor-plan-must-follow.md
backend/api-server/: Cargo.toml
backend/api-server/src/: admin_auth_throttle.rs  auth_handlers.rs  challenge_creation_handlers.rs  error.rs  extractors.rs  handlers.rs  lib.rs  main.rs  pioneer_code_security.rs  presenters.rs  router.rs  state.rs
backend/api-server/src/challenge_creation_handlers/: tests.rs
backend/api-server/src/handlers/: admin.rs  artifacts.rs  creator.rs  score_distribution.rs
backend/integration-tests/: Cargo.toml
backend/integration-tests/src/: lib.rs
backend/integration-tests/tests/: account_deletion.rs  admin.rs  admin_official.rs  agents.rs  challenge_creation.rs  challenge_creation_assets.rs  challenges.rs  cuda_smoke.rs  evaluation_claims.rs  health.rs  helpers.rs  matrix_multiplication.rs  pioneer_codes.rs  problems.rs  public_eval.rs  public_eval_failures.rs  public_eval_quota.rs  public_read.rs  request_validation.rs
backend/integration-tests/tests/challenge_creation/: lifecycle.rs
backend/integration-tests/tests/public_eval/: admission.rs  runner.rs  security.rs
backend/integration-tests/tests/support/: challenge_creation.rs
backend/shared/: Cargo.toml
backend/shared/src/: challenge_bundle.rs  challenge_creation.rs  config.rs  error.rs  leaderboard.rs  lib.rs  problem_bundle.rs  runner.rs  zip_project.rs
backend/shared/src/auth/: mod.rs
backend/shared/src/challenge_bundle/: community.rs  filesystem.rs  images.rs  tests.rs
backend/shared/src/config/: tests.rs
backend/shared/src/db/: agents.rs  challenge_creation.rs  challenges.rs  discussions.rs  evaluation_jobs.rs  evaluation_policy.rs  evaluations.rs  ids.rs  json.rs  leaderboard.rs  maintenance.rs  mod.rs  pioneer_codes.rs  pool.rs  problems.rs  queries.rs  sessions.rs  solution_submissions.rs  validation_quotas.rs
backend/shared/src/models/: auth.rs  challenge.rs  challenge_creation.rs  contract_tests.rs  evaluation.rs  hashes.rs  ids.rs  images.rs  localization.rs  mod.rs  names.rs  paths.rs  pioneer_codes.rs  problem.rs  request.rs  urls.rs
backend/shared/src/runner/: docker.rs  errors.rs  execution.rs  filesystem.rs  logs.rs  run_io.rs  storage.rs  tests.rs  topologies.rs
backend/shared/src/storage/: mod.rs
backend/shared/src/validation/: archive.rs  github.rs  public_api.rs  schemas.rs  targets.rs  text.rs
backend/worker/: Cargo.toml
backend/worker/src/: cycle.rs  host_probe.rs  lib.rs  main.rs
crates/config/: Cargo.toml
crates/config/src/: env.rs  env_policy.rs  groups.rs  lib.rs  local_urls.rs  runtime_modes.rs  storage_config.rs  tests.rs  validation.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: challenge_bundle.rs  challenge_creation.rs  lib.rs  zip_project.rs
crates/contracts/src/challenge_bundle/: filesystem.rs  images.rs  tests.rs
crates/contracts/src/validation/: archive.rs  github.rs  mod.rs  public_api.rs  schemas.rs  targets.rs  text.rs
crates/contracts/src/zip_project/: package.rs
crates/dev-checks/: Cargo.toml
crates/dev-checks/src/: large_files.rs  lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  lib.rs  storage.rs  validation.rs  zip_project.rs
crates/domain/src/models/: auth.rs  challenge.rs  challenge_creation.rs  contract_tests.rs  evaluation.rs  github.rs  hashes.rs  ids.rs  images.rs  mod.rs  paths.rs  pioneer_codes.rs  request.rs  urls.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: auth.rs  leaderboard_rules.rs  lib.rs  repositories.rs
crates/persistence/src/db/: agents.rs  challenge_creation.rs  challenges.rs  evaluation_jobs.rs  evaluation_policy.rs  evaluations.rs  ids.rs  json.rs  leaderboard.rs  maintenance.rs  mod.rs  pioneer_codes.rs  pool.rs  sessions.rs  solution_submissions.rs  validation_quotas.rs
crates/persistence/src/repositories/: agents.rs  challenges.rs  (+9 more)
crates/runner/: Cargo.toml
crates/runner/src/: backend.rs  context.rs  docker.rs  errors.rs  execution.rs  filesystem.rs  labels.rs  lib.rs  limits.rs  logs.rs  run_io.rs  storage.rs  tests.rs  topologies.rs
crates/services/: Cargo.toml
crates/services/src/: admin.rs  auth.rs  challenge_drafts.rs  challenge_metadata.rs  challenge_review_records.rs  creator.rs  evaluation_lifecycle.rs  lib.rs  maintenance.rs  public_projection.rs  solution_submissions.rs  storage_errors.rs
crates/storage/: Cargo.toml
crates/storage/src/: backend.rs  error.rs  factory.rs  fs_utils.rs  intent.rs  lib.rs  local.rs  s3.rs  tar_archive.rs  tests.rs
frontends/agentics-cli/: Cargo.toml
frontends/agentics-cli/src/: api.rs  cli.rs  commands.rs  config.rs  lib.rs  main.rs  output.rs  package.rs  tests.rs  workspace.rs
ops/: AGENTS.md  Cargo.toml  containerization.md
ops/pre-commit/: Cargo.toml
ops/pre-commit/src/: main.rs
ops/src/: agents_claude_links.rs  baseline_submitter.rs  check_dgx_spark_host.rs  check_dgx_spark_profile.rs  check_local_mvp.rs  compose_prod.rs  dgx.rs  dgx_profile.rs  dgx_storage.rs  env_check.rs  human_agent_docs.rs  large_files.rs  lib.rs  local_demo.rs  local_demo_seed.sql  local_dev.rs  migrate.rs  pre_commit.rs  private_bundle_backups.rs  production_rehearsal.rs  publish.rs  support.rs
ops/src/baseline_submitter/: tests.rs
ops/src/check_dgx_spark_profile/: profile_probes.rs
ops/src/compose_prod/: bridge_egress.rs  raw_env.rs  rehearsal_purge.rs  runner_cleanup.rs  runner_docker.rs  tests.rs
ops/src/dgx_profile/: tests.rs
ops/src/frontier_cs_private_assets/: backup.rs  generate.rs  mod.rs  validation.rs
ops/src/local_demo/: local_demo_config.rs  local_demo_seed.rs  process.rs
ops/src/local_dev/: local_dev_config.rs  local_dev_seed.rs
ops/src/production_rehearsal/: browser.rs  cleanup.rs  error.rs  fixtures.rs  http.rs  report.rs  runtime.rs  submissions.rs  tests.rs
(+579 files in other folders)
