[workspace]
resolver = "3"
members = [
    "backend/shared",
    "backend/api-server",
    "backend/worker",
    "backend/integration-tests",
    "frontends/agentics-cli",
]

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.lints.clippy]
arithmetic_side_effects = "warn"
expect_used = "warn"
indexing_slicing = "warn"
panic = "warn"
unwrap_used = "warn"

[workspace.dependencies]
shared = { path = "backend/shared" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
figment = { version = "0.10", features = ["env"] }
reqwest = { version = "0.13", features = ["json"] }
bollard = "0.20"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }
axum = "0.8"
base64 = "0.22"
zip = "8"
ignore = "0.4"
schemars = { version = "1.2", features = ["preserve_order"] }
