[workspace]
resolver = "3"
members = [
    "crates/error",
    "crates/domain",
    "crates/contracts",
    "crates/storage",
    "crates/config",
    "crates/persistence",
    "crates/services",
    "crates/runner",
    "backend/api-server",
    "backend/worker",
    "backend/integration-tests",
    "frontends/agentics-cli",
    "ops",
]

[workspace.package]
version = "0.2.5"
edition = "2024"

[workspace.lints.rust]
let_underscore_drop = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
unsafe_code = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
allow_attributes_without_reason = "warn"
arithmetic_side_effects = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
enum_glob_use = "warn"
expl_impl_clone_on_copy = "warn"
expect_used = "warn"
future_not_send = "warn"
indexing_slicing = "warn"
infallible_try_from = "warn"
invalid_upcast_comparisons = "warn"
iter_not_returning_iterator = "warn"
let_underscore_future = "warn"
lossy_float_literal = "warn"
mem_forget = "warn"
panic = "warn"
panic_in_result_fn = "warn"
rc_mutex = "warn"
string_slice = "warn"
todo = "warn"
unimplemented = "warn"
unchecked_time_subtraction = "warn"
unused_async = "warn"
unwrap_used = "warn"
wildcard_imports = "warn"

[workspace.dependencies]
agentics-error = { path = "crates/error" }
agentics-domain = { path = "crates/domain" }
agentics-contracts = { path = "crates/contracts" }
agentics-storage = { path = "crates/storage" }
agentics-config = { path = "crates/config" }
agentics-persistence = { path = "crates/persistence" }
agentics-services = { path = "crates/services" }
agentics-runner = { path = "crates/runner" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secrecy = { version = "0.10.3", features = ["serde"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = { version = "2", features = ["serde"] }
envy = "0.4"
reqwest = { version = "0.13", features = ["json"] }
bollard = "0.21"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }
axum = "0.8"
base64 = "0.22"
zip = "8"
ignore = "0.4"
schemars = { version = "1.2", features = ["preserve_order"] }
fs2 = "0.4"
nutype = { version = "0.7", features = ["serde"] }
garde = { version = "0.23.0", default-features = false, features = ["derive"] }
gix-hash = { version = "0.25", features = ["sha1", "sha256"] }
oci-spec = { version = "0.9", default-features = false, features = ["distribution", "image"] }
governor = "0.10"
futures = "0.3"
tempfile = "3"
nix = { version = "0.31", features = ["fs", "process", "signal", "user"] }
sha2 = "0.11"
rand = "0.10"
hex = "0.4"
async-trait = "0.1"
tokio-util = "0.7"
bytes = "1"
http = "1"
aws-config = "1"
aws-sdk-s3 = "1"
tar = "0.4"
