[package]
name = "agentics-ops"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bollard = { workspace = true }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
futures = { workspace = true }
ignore = { workspace = true }
nix = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = "0.6"
