[package]
name = "agentics-ops"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bollard = { workspace = true }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
envy = { workspace = true }
futures = { workspace = true }
ignore = { workspace = true }
nix = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
agentics-config = { workspace = true }
agentics-contracts = { workspace = true }
agentics-domain = { workspace = true }
agentics-persistence = { workspace = true }
agentics-runner = { workspace = true }
agentics-storage = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = "0.6"
