[package]
name = "api-server"
version.workspace = true
edition.workspace = true

[lib]
name = "api_server"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }

axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
base64 = "0.22"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
zip = "8"
