[package]
name = "api-server"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "api_server"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
shared = { workspace = true }

axum = { workspace = true }
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
sqlx = { workspace = true }
zip = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
