[package]
name = "api-server"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "api_server"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
agentics-config = { workspace = true }
agentics-contracts = { workspace = true }
agentics-domain = { workspace = true }
agentics-error = { workspace = true }
agentics-persistence = { workspace = true }
agentics-services = { workspace = true }
agentics-storage = { workspace = true }

axum = { workspace = true }
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
garde = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
sqlx = { workspace = true }
zip = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
governor = { workspace = true }
