[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { workspace = true }
api-server = { path = "../api-server" }
worker = { path = "../worker" }

tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
bollard = { workspace = true }
tempfile = "3"
zip = { workspace = true }
