[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true

[dependencies]
agentics-config = { workspace = true }
agentics-contracts = { workspace = true }
agentics-domain = { workspace = true }
agentics-persistence = { workspace = true }
agentics-runner = { workspace = true }
agentics-services = { workspace = true }
agentics-storage = { workspace = true }
api-server = { path = "../api-server" }
worker = { path = "../worker" }

tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
bollard = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }
zip = { workspace = true }
