[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
figment = { workspace = true }

axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
bollard = "0.20"
zip = "8"
sha2 = "0.11"
rand = "0.10"
base64 = "0.22"
tokio-util = "0.7"
bytes = "1"
futures = "0.3"
http = "1"
hyper = { version = "1", features = ["full"] }
async-trait = "0.1"

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
