[package]
name = "shared"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
figment = { workspace = true }

axum = { workspace = true }
sqlx = { workspace = true }
bollard = { workspace = true }
zip = { workspace = true }
sha2 = "0.11"
rand = "0.10"
base64 = { workspace = true }
tokio-util = "0.7"
bytes = "1"
futures = "0.3"
http = "1"
hyper = { version = "1", features = ["full"] }
async-trait = "0.1"
hex = "0.4"

[dev-dependencies]
reqwest = { workspace = true }
