[package]
name = "worker"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "worker"
path = "src/main.rs"

[lib]
name = "worker"
path = "src/lib.rs"

[dependencies]
shared = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
bollard = { workspace = true }
