[package]
name = "worker"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "worker"
path = "src/main.rs"

[lib]
name = "worker"
path = "src/lib.rs"

[dependencies]
agentics-config = { workspace = true }
agentics-contracts = { workspace = true }
agentics-domain = { workspace = true }
agentics-persistence = { workspace = true }
agentics-runner = { workspace = true }
agentics-storage = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
bollard = { workspace = true }
futures = { workspace = true }
