[package]
name = "agentics-worker"
version.workspace = true
edition.workspace = true
description = "Evaluation worker service for the Agentics challenge platform."
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[[bin]]
name = "worker"
path = "src/main.rs"

[lib]
name = "worker"
path = "src/lib.rs"

[dependencies]
agentics-config = { workspace = true }
agentics-contracts = { workspace = true }
agentics-domain = { workspace = true }
agentics-persistence = { workspace = true }
agentics-runner = { workspace = true }
agentics-services = { workspace = true }
agentics-storage = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
bollard = { workspace = true }
futures = { workspace = true }
