[package]
name = "agentics-config"
version.workspace = true
edition.workspace = true
description = "Configuration loading and validation for Agentics services and tooling."
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
agentics-domain = { workspace = true }
agentics-contracts = { workspace = true }
agentics-storage = { workspace = true }
anyhow = { workspace = true }
envy = { workspace = true }
garde = { workspace = true }
http = { workspace = true }
nix = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
