[package]
name = "agentics-contracts"
version.workspace = true
edition.workspace = true
description = "Shared API and challenge contract DTOs for Agentics."
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[[bin]]
name = "export-web-schemas"
path = "src/bin/export_web_schemas.rs"

[dependencies]
agentics-domain = { workspace = true }
agentics-error = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
garde = { workspace = true }
zip = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
