[package]
name = "agentics-dev-checks"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
