[package]
name = "agentics-dev-checks"
version.workspace = true
edition.workspace = true
description = "Development check primitives used by Agentics tooling."
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
