[package]
name = "agentics-runner"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
agentics-domain = { workspace = true }
agentics-contracts = { workspace = true }
agentics-config = { workspace = true }
agentics-error = { workspace = true }
agentics-storage = { workspace = true }
tokio = { workspace = true }
bollard = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
fs2 = { workspace = true }
zip = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
