[package]
name = "agentics-storage"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
agentics-domain = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
