[package]
name = "agentics-cli"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = "6"
ignore = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
tokio = { workspace = true }
toml = "1.0"
zip = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = "0.6"

[[bin]]
name = "agentics"
path = "src/main.rs"
